[tool.poetry]
name = "problemsolver-backend"
version = "0.1.0"
description = "Problemsolver - FastAPI backend skeleton"
authors = ["problemsolver-team <dev@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
sqlalchemy = "^2.1"
asyncpg = "^0.28"
alembic = "^1.11"
pydantic = "^2.1"
python-dotenv = "^0.21.0"
aioredis = "^2.0"
httpx = "^0.24.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3"
pytest-asyncio = "^0.22"
tox = "^4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"